Create limited test batch file automatically

--- a/notebooks/Fault Test - CNV-QNN_Cifar10_Testset.ipynb
+++ b/notebooks/Fault Test - CNV-QNN_Cifar10_Testset.ipynb
@@ -68,6 +68,12 @@
     "    #unzip\n",
     "    !tar -xf cifar-10-binary.tar.gz\n",
     "\n",
+    "if not os.path.exists(\"/home/xilinx/jupyter_notebooks/bnn/cifar-10-batches-bin/test_batch_1000.bin\"):\n",
+    "    with open(\"/home/xilinx/jupyter_notebooks/bnn/cifar-10-batches-bin/test_batch.bin\", \"rb\") as infile:\n",
+    "        with open(\"/home/xilinx/jupyter_notebooks/bnn/cifar-10-batches-bin/test_batch_1000.bin\", \"wb+\") as outfile:\n",
+    "            for i in range(1000):\n",
+    "                outfile.write(infile.read(3073))\n",
+    "\n",
     "labels = []\n",
     "input_file = \"/home/xilinx/jupyter_notebooks/bnn/cifar-10-batches-bin/test_batch_1000.bin\"\n",
     "with open(input_file, \"rb\") as file:\n",
