Redesigned TMR networks

--- a/notebooks/Fault Mitigation Test - CNV-QNN_Cifar10_Testset.ipynb
+++ b/notebooks/Fault Mitigation Test - CNV-QNN_Cifar10_Testset.ipynb
@@ -255,7 +255,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Network Test Function\n",
+    "### Network Test Functions\n",
     "For each combination of weight/activation and SEU/MBU, the test will be repeated __num_runs__ times and __num_flips__ faults will be injected. The results will be written to files located in __output_folder__."
    ]
   },
@@ -375,11 +375,6 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### W2A2 - 2 bit weight and 2 activation\n",
     "Run the control test for cnvW2A2"
@@ -412,11 +407,6 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## 4. Run the tests"
    ]
@@ -429,14 +419,18 @@
    "source": [
     "flip_counts = [1, 2, 5, 10, 20, 50, 100]\n",
     "\n",
-    "for flips in flip_counts:\n",
-    "    test_network(bnn.NETWORK_CNVW1A1, accuracy_W1A1_control, num_runs, flips, output_folder)\n",
-    "    test_network(bnn.NETWORK_CNVW2A2, accuracy_W2A2_control, num_runs, flips, output_folder)\n",
     "\n",
+    "#Test TMR network weights/activations\n",
     "for flips in flip_counts:\n",
-    "    for layer in range(9):\n",
-    "        test_network_layers(bnn.NETWORK_CNVW1A1, accuracy_W1A1_control, num_runs, flips, [layer], output_folder)\n",
-    "        test_network_layers(bnn.NETWORK_CNVW2A2, accuracy_W2A2_control, num_runs, flips, [layer], output_folder)"
+    "    test_network(bnn.NETWORK_CNVW1A1_TMR, accuracy_W1A1_control, num_runs, flips, output_folder)\n",
+    "    test_network(bnn.NETWORK_CNVW2A2_TMR, accuracy_W2A2_control, num_runs, flips, output_folder)\n",
+    "\n",
+    "\n",
+    "#Test TMR network layers\n",
+    "for layer in range(9):\n",
+    "    for flips in flip_counts:\n",
+    "        test_network_layers(bnn.NETWORK_CNVW1A1_TMR, accuracy_W1A1_control, num_runs, flips, [layer], output_folder)\n",
+    "        test_network_layers(bnn.NETWORK_CNVW2A2_TMR, accuracy_W2A2_control, num_runs, flips, [layer], output_folder)"
    ]
   },
   {
