Fault Mitigation tests weights/activations in individual layers

--- a/notebooks/Fault Mitigation Test - CNV-QNN_Cifar10_Testset.ipynb
+++ b/notebooks/Fault Mitigation Test - CNV-QNN_Cifar10_Testset.ipynb
@@ -316,20 +316,42 @@
    "outputs": [],
    "source": [
     "def test_network_layers(network, control_accuracy, num_runs, num_flips, target_layers, output_folder):\n",
-    "    bit_output = {}\n",
-    "    word_output = {}\n",
+    "    weight_bit_output = {}\n",
+    "    activation_bit_output = {}\n",
+    "    weight_word_output = {}\n",
+    "    activation_word_output = {}\n",
     "    stats = {}\n",
     "\n",
-    "    #Test bit flips\n",
-    "    bit_test_results = cnv_cifar_fault_test(\"Bit{}\".format(target_layers), network, input_file, num_runs, num_flips, False, -1, target_layers)\n",
-    "    bit_output       = make_output_dict(network, num_runs, num_flips, control_accuracy, {\"bit\": bit_test_results[2]})\n",
-    "\n",
-    "    #Test word flips\n",
-    "    word_test_results = cnv_cifar_fault_test(\"Word{}\".format(target_layers), network, input_file, num_runs, num_flips, True, -1, target_layers)\n",
-    "    word_output       = make_output_dict(network, num_runs, num_flips, control_accuracy, {\"word\": word_test_results[2]})\n",
+    "    #Test weight bit flips\n",
+    "    weight_bit_results = cnv_cifar_fault_test(\"Weight Bit {}\".format(target_layers), network, input_file, num_runs, num_flips, False, 0, target_layers)\n",
+    "    weight_bit_output  = make_output_dict(network, num_runs, num_flips, control_accuracy, {\"weight bit\": weight_bit_results[2]})\n",
     "    \n",
+    "    write_stats_file(output_folder.format(num_flips) + \"temp/layers/\" + network + \"_results_bit_weight_{}.json\".format(target_layers), weight_bit_output)\n",
+    "    \n",
+    "    \n",
+    "    #Test activation bit flips\n",
+    "    activation_bit_results = cnv_cifar_fault_test(\"Activation Bit {}\".format(target_layers), network, input_file, num_runs, num_flips, False, 1, target_layers)\n",
+    "    activation_bit_output  = make_output_dict(network, num_runs, num_flips, control_accuracy, {\"activation bit\": activation_bit_results[2]})\n",
+    "\n",
+    "    write_stats_file(output_folder.format(num_flips) + \"temp/layers/\" + network + \"_results_bit_activation_{}.json\".format(target_layers), activation_bit_output)\n",
+    "    \n",
+    "    \n",
+    "    #Test weight word flips\n",
+    "    weight_word_results = cnv_cifar_fault_test(\"Weight Word {}\".format(target_layers), network, input_file, num_runs, num_flips, True, 0, target_layers)\n",
+    "    weight_word_output  = make_output_dict(network, num_runs, num_flips, control_accuracy, {\"weight word\": weight_word_results[2]})\n",
+    "    \n",
+    "    write_stats_file(output_folder.format(num_flips) + \"temp/layers/\" + network + \"_results_word_weight_{}.json\".format(target_layers), weight_word_output)\n",
+    "    \n",
+    "    \n",
+    "    #Test activation word flips\n",
+    "    activation_word_results = cnv_cifar_fault_test(\"Activation Word {}\".format(target_layers), network, input_file, num_runs, num_flips, True, 1, target_layers)\n",
+    "    activation_word_output  = make_output_dict(network, num_runs, num_flips, control_accuracy, {\"activation word\": activation_word_results[2]})\n",
+    "\n",
+    "    write_stats_file(output_folder.format(num_flips) + \"temp/layers/\" + network + \"_results_word_activation_{}.json\".format(target_layers), activation_word_output)\n",
+    "    \n",
+    "\n",
     "    #Write all stats to file\n",
-    "    stats = dict_of_dicts_merge(bit_output, word_output)\n",
+    "    stats = dict_of_dicts_merge(weight_bit_output, activation_bit_output, weight_word_output, activation_word_output)\n",
     "    stats = calculate_stats(stats)\n",
     "    write_stats_file(output_folder.format(num_flips) + \"layers/\" + network + \"_stats_layer{}.json\".format(target_layers), stats)"
    ]
@@ -419,7 +441,6 @@
    "source": [
     "flip_counts = [1, 2, 5, 10, 20, 50, 100]\n",
     "\n",
-    "\n",
     "#Test TMR network weights/activations\n",
     "for flips in flip_counts:\n",
     "    test_network(bnn.NETWORK_CNVW1A1_TMR, accuracy_W1A1_control, num_runs, flips, output_folder)\n",
@@ -427,7 +448,7 @@
     "\n",
     "\n",
     "#Test TMR network layers\n",
-    "for layer in range(9):\n",
+    "for layer in range(5):\n",
     "    for flips in flip_counts:\n",
     "        test_network_layers(bnn.NETWORK_CNVW1A1_TMR, accuracy_W1A1_control, num_runs, flips, [layer], output_folder)\n",
     "        test_network_layers(bnn.NETWORK_CNVW2A2_TMR, accuracy_W2A2_control, num_runs, flips, [layer], output_folder)"
