Updated fault testing notebooks

--- a/notebooks/Fault Mitigation Test - CNV-QNN_Cifar10_Testset.ipynb
+++ b/notebooks/Fault Mitigation Test - CNV-QNN_Cifar10_Testset.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Fault Injection on Quantized Neural Networks\n",
     "\n",
-    "This notebook tests fault injection on quantized neural networks.\n",
+    "This notebook tests fault injection on quantized neural networks modified to mitigate the impact of faults.\n",
     "\n",
     "The different precision neural networks inspired at VGG-16 feature 6 convolutional layers, 3 max pool layers and 3 fully connected layers. The networks classify the CIFAR-10 testset. The 2 different precision networks tested here are:\n",
     "\n",
@@ -122,6 +122,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Various functions for handling dictionaries and calculating statistics"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -225,6 +232,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**cnv_cifar_fault_test:** Classifies the given image set *num_runs* number of times, injecting *num_faults* faults per run. The network is reset between runs.\n",
+    "\n",
+    "\n",
+    "- **title:** The title of the test\n",
+    "- **network:** The network to test. e.g. bnn.NETWORK_CNVW1A1\n",
+    "- **num_runs:** The number of tests to perform\n",
+    "- **num_flips:** The number of faults to inject per run\n",
+    "- **flip_word:** A boolean indicating if a bit or word should be flipped\n",
+    "- **weight_or_activation:** An integer specifying if weights, activations, or both should be targeted\n",
+    "\n",
+    "        -1 = target weights and activations\n",
+    "        0  = target weights only\n",
+    "        1  = target activations only\n",
+    "- **target_layers:** An array of integers specifying which layers to target. Leave empty to target all layers."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -255,6 +282,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "&nbsp;\n",
+    "\n",
     "### Network Test Functions\n",
     "For each combination of weight/activation and SEU/MBU, the test will be repeated __num_runs__ times and __num_flips__ faults will be injected. The results will be written to files located in __output_folder__."
    ]
@@ -359,12 +388,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
+    "&nbsp;\n",
+    "\n",
     "### W1A1 - 1 bit weight and 1 activation\n",
     "Run the control test for cnvW1A1"
    ]
@@ -430,6 +456,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "&nbsp;\n",
+    "\n",
     "## 4. Run the tests"
    ]
   },
@@ -453,13 +481,6 @@
     "        test_network_layers(bnn.NETWORK_CNVW1A1_TMR, accuracy_W1A1_control, num_runs, flips, [layer], output_folder)\n",
     "        test_network_layers(bnn.NETWORK_CNVW2A2_TMR, accuracy_W2A2_control, num_runs, flips, [layer], output_folder)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
