--- a/notebooks/Fault Test - CNV-QNN_Cifar10_Testset.ipynb
+++ b/notebooks/Fault Test - CNV-QNN_Cifar10_Testset.ipynb
@@ -39,11 +39,6 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## 2. The Cifar-10 testset\n",
     "\n",
@@ -108,11 +103,6 @@
     "num_runs = 100\n",
     "output_folder = \"/home/xilinx/jupyter_notebooks/bnn/{}flips/cnv/\""
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -225,6 +215,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**cnv_cifar_fault_test:** Classifies the given image set *num_runs* number of times, injecting *num_faults* faults per run. The network is reset between runs.\n",
+    "\n",
+    "\n",
+    "- **title:** The title of the test\n",
+    "- **network:** The network to test. e.g. bnn.NETWORK_CNVW1A1\n",
+    "- **num_runs:** The number of tests to perform\n",
+    "- **num_flips:** The number of faults to inject per run\n",
+    "- **flip_word:** A boolean indicating if a bit or word should be flipped\n",
+    "- **weight_or_activation:** An integer specifying if weights, activations, or both should be targeted\n",
+    "\n",
+    "        -1 = target weights and activations\n",
+    "        0  = target weights only\n",
+    "        1  = target activations only\n",
+    "- **target_layers:** An array of integers specifying which layers to target. Leave empty to target all layers."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -316,20 +326,42 @@
    "outputs": [],
    "source": [
     "def test_network_layers(network, control_accuracy, num_runs, num_flips, target_layers, output_folder):\n",
-    "    bit_output = {}\n",
-    "    word_output = {}\n",
+    "    weight_bit_output = {}\n",
+    "    activation_bit_output = {}\n",
+    "    weight_word_output = {}\n",
+    "    activation_word_output = {}\n",
     "    stats = {}\n",
     "\n",
-    "    #Test bit flips\n",
-    "    bit_test_results = cnv_cifar_fault_test(\"Bit{}\".format(target_layers), network, input_file, num_runs, num_flips, False, -1, target_layers)\n",
-    "    bit_output       = make_output_dict(network, num_runs, num_flips, control_accuracy, {\"bit\": bit_test_results[2]})\n",
-    "\n",
-    "    #Test word flips\n",
-    "    word_test_results = cnv_cifar_fault_test(\"Word{}\".format(target_layers), network, input_file, num_runs, num_flips, True, -1, target_layers)\n",
-    "    word_output       = make_output_dict(network, num_runs, num_flips, control_accuracy, {\"word\": word_test_results[2]})\n",
+    "    #Test weight bit flips\n",
+    "    weight_bit_results = cnv_cifar_fault_test(\"Weight Bit {}\".format(target_layers), network, input_file, num_runs, num_flips, False, 0, target_layers)\n",
+    "    weight_bit_output  = make_output_dict(network, num_runs, num_flips, control_accuracy, {\"weight bit\": weight_bit_results[2]})\n",
     "    \n",
+    "    write_stats_file(output_folder.format(num_flips) + \"temp/layers/\" + network + \"_results_bit_weight_{}.json\".format(target_layers), weight_bit_output)\n",
+    "    \n",
+    "    \n",
+    "    #Test activation bit flips\n",
+    "    activation_bit_results = cnv_cifar_fault_test(\"Activation Bit {}\".format(target_layers), network, input_file, num_runs, num_flips, False, 1, target_layers)\n",
+    "    activation_bit_output  = make_output_dict(network, num_runs, num_flips, control_accuracy, {\"activation bit\": activation_bit_results[2]})\n",
+    "\n",
+    "    write_stats_file(output_folder.format(num_flips) + \"temp/layers/\" + network + \"_results_bit_activation_{}.json\".format(target_layers), activation_bit_output)\n",
+    "    \n",
+    "    \n",
+    "    #Test weight word flips\n",
+    "    weight_word_results = cnv_cifar_fault_test(\"Weight Word {}\".format(target_layers), network, input_file, num_runs, num_flips, True, 0, target_layers)\n",
+    "    weight_word_output  = make_output_dict(network, num_runs, num_flips, control_accuracy, {\"weight word\": weight_word_results[2]})\n",
+    "    \n",
+    "    write_stats_file(output_folder.format(num_flips) + \"temp/layers/\" + network + \"_results_word_weight_{}.json\".format(target_layers), weight_word_output)\n",
+    "    \n",
+    "    \n",
+    "    #Test activation word flips\n",
+    "    activation_word_results = cnv_cifar_fault_test(\"Activation Word {}\".format(target_layers), network, input_file, num_runs, num_flips, True, 1, target_layers)\n",
+    "    activation_word_output  = make_output_dict(network, num_runs, num_flips, control_accuracy, {\"activation word\": activation_word_results[2]})\n",
+    "\n",
+    "    write_stats_file(output_folder.format(num_flips) + \"temp/layers/\" + network + \"_results_word_activation_{}.json\".format(target_layers), activation_word_output)\n",
+    "    \n",
+    "\n",
     "    #Write all stats to file\n",
-    "    stats = dict_of_dicts_merge(bit_output, word_output)\n",
+    "    stats = dict_of_dicts_merge(weight_bit_output, activation_bit_output, weight_word_output, activation_word_output)\n",
     "    stats = calculate_stats(stats)\n",
     "    write_stats_file(output_folder.format(num_flips) + \"layers/\" + network + \"_stats_layer{}.json\".format(target_layers), stats)"
    ]
@@ -337,12 +369,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
+    "&nbsp;\n",
+    "\n",
     "### W1A1 - 1 bit weight and 1 activation\n",
     "Run the control test for cnvW1A1"
    ]
@@ -371,11 +400,6 @@
     "xlnk.xlnk_reset()\n",
     "print()"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -412,12 +436,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
+    "&nbsp;\n",
+    "\n",
     "## 4. Run the tests"
    ]
   },
@@ -438,13 +459,6 @@
     "        test_network_layers(bnn.NETWORK_CNVW1A1, accuracy_W1A1_control, num_runs, flips, [layer], output_folder)\n",
     "        test_network_layers(bnn.NETWORK_CNVW2A2, accuracy_W2A2_control, num_runs, flips, [layer], output_folder)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
