--- a/notebooks/Fault Test - LFC-QNN_MNIST.ipynb
+++ b/notebooks/Fault Test - LFC-QNN_MNIST.ipynb
@@ -199,7 +199,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "&nbsp;\n",
+    "\n",
     "### Fault Test Function"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**lfc_mnist_fault_test:** Classifies the given image set *num_runs* number of times, injecting *num_faults* faults per run. The network is reset between runs.\n",
+    "\n",
+    "\n",
+    "- **title:** The title of the test\n",
+    "- **network:** The network to test. e.g. bnn.NETWORK_CNVW1A1\n",
+    "- **num_runs:** The number of tests to perform\n",
+    "- **num_flips:** The number of faults to inject per run\n",
+    "- **flip_word:** A boolean indicating if a bit or word should be flipped\n",
+    "- **weight_or_activation:** An integer specifying if weights, activations, or both should be targeted\n",
+    "\n",
+    "        -1 = target weights and activations\n",
+    "        0  = target weights only\n",
+    "        1  = target activations only\n",
+    "- **target_layers:** An array of integers specifying which layers to target. Leave empty to target all layers."
    ]
   },
   {
@@ -232,12 +254,116 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "&nbsp;\n",
+    "\n",
+    "### Network Test Functions\n",
+    "For each combination of weight/activation and SEU/MBU, the test will be repeated __num_runs__ times and __num_flips__ faults will be injected. The results will be written to files located in __output_folder__."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test_network(network, control_accuracy, num_runs, num_flips, output_folder):\n",
+    "    #Separate output dicts for each run. They will be combined later for the\n",
+    "    #final results, and the redundant data will be discarded.\n",
+    "    weight_bit_output = {}\n",
+    "    activation_bit_output = {}\n",
+    "    weight_word_output = {}\n",
+    "    activation_word_output = {}\n",
+    "    stats = {}\n",
+    "    \n",
+    "    \n",
+    "    #Test bit flips (weight)\n",
+    "    weight_bit_data   = lfc_mnist_fault_test(\"Weight Bit\", network, input_file, num_runs, num_flips, False, 0)\n",
+    "    weight_bit_output = make_output_dict(network, num_runs, num_flips, control_accuracy, {\"weight bit\": weight_bit_data[2]})\n",
+    "\n",
+    "    write_stats_file(output_folder.format(num_flips) + \"temp/\" + network + \"_results_bit_weight.json\", weight_bit_output)\n",
+    "\n",
+    "\n",
+    "    #Test bit flips (activation)\n",
+    "    activation_bit_data   = lfc_mnist_fault_test(\"Activation Bit\", network, input_file, num_runs, num_flips, False, 1)\n",
+    "    activation_bit_output = make_output_dict(network, num_runs, num_flips, control_accuracy, {\"activation bit\": activation_bit_data[2]})\n",
+    "\n",
+    "    write_stats_file(output_folder.format(num_flips) + \"temp/\" + network + \"_results_bit_activation.json\", activation_bit_output)\n",
+    "\n",
+    "\n",
+    "    #Test word flips (weight)\n",
+    "    weight_word_data   = lfc_mnist_fault_test(\"Weight Word\", network, input_file, num_runs, num_flips, True, 0)\n",
+    "    weight_word_output = make_output_dict(network, num_runs, num_flips, control_accuracy, {\"weight word\": weight_word_data[2]})\n",
+    "\n",
+    "    write_stats_file(output_folder.format(num_flips) + \"temp/\" + network + \"_results_word_weight.json\", weight_word_output)\n",
+    "\n",
+    "\n",
+    "    #Test word flips (activation)\n",
+    "    activation_word_data   = lfc_mnist_fault_test(\"Activation Word\", network, input_file, num_runs, num_flips, True, 1)\n",
+    "    activation_word_output = make_output_dict(network, num_runs, num_flips, control_accuracy, {\"activation word\": activation_word_data[2]})\n",
+    "\n",
+    "    write_stats_file(output_folder.format(num_flips) + \"temp/\" + network + \"_results_word_activation.json\", activation_word_output)\n",
+    "\n",
+    "    \n",
+    "    #Write all stats to file\n",
+    "    stats = dict_of_dicts_merge(weight_bit_output, activation_bit_output, weight_word_output, activation_word_output)\n",
+    "    stats = calculate_stats(stats)\n",
+    "    write_stats_file(output_folder.format(num_flips) + network + \"_stats.json\", stats)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test_network_layers(network, control_accuracy, num_runs, num_flips, target_layers, output_folder):\n",
+    "    weight_bit_output = {}\n",
+    "    activation_bit_output = {}\n",
+    "    weight_word_output = {}\n",
+    "    activation_word_output = {}\n",
+    "    stats = {}\n",
+    "\n",
+    "    #Test weight bit flips\n",
+    "    weight_bit_results = lfc_mnist_fault_test(\"Weight Bit {}\".format(target_layers), network, input_file, num_runs, num_flips, False, 0, target_layers)\n",
+    "    weight_bit_output  = make_output_dict(network, num_runs, num_flips, control_accuracy, {\"weight bit\": weight_bit_results[2]})\n",
+    "    \n",
+    "    write_stats_file(output_folder.format(num_flips) + \"temp/layers/\" + network + \"_results_bit_weight_{}.json\".format(target_layers), weight_bit_output)\n",
+    "    \n",
+    "    \n",
+    "    #Test activation bit flips\n",
+    "    activation_bit_results = lfc_mnist_fault_test(\"Activation Bit {}\".format(target_layers), network, input_file, num_runs, num_flips, False, 1, target_layers)\n",
+    "    activation_bit_output  = make_output_dict(network, num_runs, num_flips, control_accuracy, {\"activation bit\": activation_bit_results[2]})\n",
+    "\n",
+    "    write_stats_file(output_folder.format(num_flips) + \"temp/layers/\" + network + \"_results_bit_activation_{}.json\".format(target_layers), activation_bit_output)\n",
+    "    \n",
+    "    \n",
+    "    #Test weight word flips\n",
+    "    weight_word_results = lfc_mnist_fault_test(\"Weight Word {}\".format(target_layers), network, input_file, num_runs, num_flips, True, 0, target_layers)\n",
+    "    weight_word_output  = make_output_dict(network, num_runs, num_flips, control_accuracy, {\"weight word\": weight_word_results[2]})\n",
+    "    \n",
+    "    write_stats_file(output_folder.format(num_flips) + \"temp/layers/\" + network + \"_results_word_weight_{}.json\".format(target_layers), weight_word_output)\n",
+    "    \n",
+    "    \n",
+    "    #Test activation word flips\n",
+    "    activation_word_results = lfc_mnist_fault_test(\"Activation Word {}\".format(target_layers), network, input_file, num_runs, num_flips, True, 1, target_layers)\n",
+    "    activation_word_output  = make_output_dict(network, num_runs, num_flips, control_accuracy, {\"activation word\": activation_word_results[2]})\n",
+    "\n",
+    "    write_stats_file(output_folder.format(num_flips) + \"temp/layers/\" + network + \"_results_word_activation_{}.json\".format(target_layers), activation_word_output)\n",
+    "    \n",
+    "\n",
+    "    #Write all stats to file\n",
+    "    stats = dict_of_dicts_merge(weight_bit_output, activation_bit_output, weight_word_output, activation_word_output)\n",
+    "    stats = calculate_stats(stats)\n",
+    "    write_stats_file(output_folder.format(num_flips) + \"layers/\" + network + \"_stats_layer{}.json\".format(target_layers), stats)"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "&nbsp;\n",
+    "\n",
     "### W1A1 - 1 bit weights and 1 bit activation"
    ]
   },
@@ -265,58 +391,6 @@
     "xlnk.xlnk_reset()\n",
     "print()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def test_W1A1(num_runs, num_flips, output_folder):\n",
-    "    weight_bit_output = {}\n",
-    "    activation_bit_output = {}\n",
-    "    weight_word_output = {}\n",
-    "    activation_word_output = {}\n",
-    "    stats = {}\n",
-    "\n",
-    "    #Test bit flips (weight)\n",
-    "    weight_bit_data   = lfc_mnist_fault_test(\"Weight Bit\", bnn.NETWORK_LFCW1A1, input_file, num_runs, num_flips, False, 0)\n",
-    "    weight_bit_output = make_output_dict(\"lfcW1A1\", num_runs, num_flips, accuracy_W1A1_control, {\"weight bit\": weight_bit_data[2]})\n",
-    "\n",
-    "    write_stats_file(output_folder.format(num_flips) + \"temp/lfcW1A1_results_bit_weight.txt\", weight_bit_output)\n",
-    "\n",
-    "\n",
-    "    #Test bit flips (activation)\n",
-    "    activation_bit_data   = lfc_mnist_fault_test(\"Activation Bit\", bnn.NETWORK_LFCW1A1, input_file, num_runs, num_flips, False, 1)\n",
-    "    activation_bit_output = make_output_dict(\"lfcW1A1\", num_runs, num_flips, accuracy_W1A1_control, {\"activation bit\": activation_bit_data[2]})\n",
-    "\n",
-    "    write_stats_file(output_folder.format(num_flips) + \"temp/lfcW1A1_results_bit_activation.txt\", activation_bit_output)\n",
-    "\n",
-    "\n",
-    "    #Test word flips (weight)\n",
-    "    weight_word_data   = lfc_mnist_fault_test(\"Weight Word\", bnn.NETWORK_LFCW1A1, input_file, num_runs, num_flips, True, 0)\n",
-    "    weight_word_output = make_output_dict(\"lfcW1A1\", num_runs, num_flips, accuracy_W1A1_control, {\"weight word\": weight_word_data[2]})\n",
-    "\n",
-    "    write_stats_file(output_folder.format(num_flips) + \"temp/lfcW1A1_results_word_weight.txt\", weight_word_output)\n",
-    "\n",
-    "\n",
-    "    #Test word flips (activation)\n",
-    "    activation_word_data   = lfc_mnist_fault_test(\"Activation Word\", bnn.NETWORK_LFCW1A1, input_file, num_runs, num_flips, True, 1)\n",
-    "    activation_word_output = make_output_dict(\"lfcW1A1\", num_runs, num_flips, accuracy_W1A1_control, {\"activation word\": activation_word_data[2]})\n",
-    "\n",
-    "    write_stats_file(output_folder.format(num_flips) + \"temp/lfcW1A1_results_word_activation.txt\", activation_word_output)\n",
-    "\n",
-    "\n",
-    "    #Write all stats to file\n",
-    "    stats = dict_of_dicts_merge(weight_bit_output, activation_bit_output, weight_word_output, activation_word_output)\n",
-    "    stats = calculate_stats(stats)\n",
-    "    write_stats_file(output_folder.format(num_flips) + \"lfcW1A1_stats.txt\", stats)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -351,61 +425,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def test_W1A2(num_runs, num_flips, output_folder):\n",
-    "    weight_bit_output = {}\n",
-    "    activation_bit_output = {}\n",
-    "    weight_word_output = {}\n",
-    "    activation_word_output = {}\n",
-    "    stats = {}\n",
-    "\n",
-    "    #Test bit flips (weight)\n",
-    "    weight_bit_data   = lfc_mnist_fault_test(\"Weight Bit\", bnn.NETWORK_LFCW1A2, input_file, num_runs, num_flips, False, 0)\n",
-    "    weight_bit_output = make_output_dict(\"lfcW1A2\", num_runs, num_flips, accuracy_W1A2_control, {\"weight bit\": weight_bit_data[2]})\n",
-    "\n",
-    "    write_stats_file(output_folder.format(num_flips) + \"temp/lfcW1A2_results_bit_weight.txt\", weight_bit_output)\n",
-    "\n",
-    "\n",
-    "    #Test bit flips (activation)\n",
-    "    activation_bit_data   = lfc_mnist_fault_test(\"Activation Bit\", bnn.NETWORK_LFCW1A2, input_file, num_runs, num_flips, False, 1)\n",
-    "    activation_bit_output = make_output_dict(\"lfcW1A2\", num_runs, num_flips, accuracy_W1A2_control, {\"activation bit\": activation_bit_data[2]})\n",
-    "\n",
-    "    write_stats_file(output_folder.format(num_flips) + \"temp/lfcW1A2_results_bit_activation.txt\", activation_bit_output)\n",
-    "\n",
-    "\n",
-    "    #Test word flips (weight)\n",
-    "    weight_word_data   = lfc_mnist_fault_test(\"Weight Word\", bnn.NETWORK_LFCW1A2, input_file, num_runs, num_flips, True, 0)\n",
-    "    weight_word_output = make_output_dict(\"lfcW1A2\", num_runs, num_flips, accuracy_W1A2_control, {\"weight word\": weight_word_data[2]})\n",
-    "\n",
-    "    write_stats_file(output_folder.format(num_flips) + \"temp/lfcW1A2_results_word_weight.txt\", weight_word_output)\n",
-    "\n",
-    "\n",
-    "    #Test word flips (activation)\n",
-    "    activation_word_data   = lfc_mnist_fault_test(\"Activation Word\", bnn.NETWORK_LFCW1A2, input_file, num_runs, num_flips, True, 1)\n",
-    "    activation_word_output = make_output_dict(\"lfcW1A2\", num_runs, num_flips, accuracy_W1A2_control, {\"activation word\": activation_word_data[2]})\n",
-    "\n",
-    "    write_stats_file(output_folder.format(num_flips) + \"temp/lfcW1A2_results_word_activation.txt\", activation_word_output)\n",
-    "\n",
-    "\n",
-    "    #Write all stats to file\n",
-    "    stats = dict_of_dicts_merge(weight_bit_output, activation_bit_output, weight_word_output, activation_word_output)\n",
-    "    stats = calculate_stats(stats)\n",
-    "    write_stats_file(output_folder.format(num_flips) + \"lfcW1A2_stats.txt\", stats)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "&nbsp;\n",
+    "\n",
     "## 3. Run Tests"
    ]
   },
@@ -415,34 +439,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_W1A1(num_runs, 1, output_folder)\n",
-    "test_W1A2(num_runs, 1, output_folder)\n",
+    "flip_counts = [1, 2, 5, 10, 20, 50, 100]\n",
     "\n",
-    "test_W1A1(num_runs, 2, output_folder)\n",
-    "test_W1A2(num_runs, 2, output_folder)\n",
+    "for flips in flip_counts:\n",
+    "    test_network(bnn.NETWORK_LFCW1A1, accuracy_W1A1_control, 1, flips, output_folder)\n",
+    "    test_network(bnn.NETWORK_LFCW1A2, accuracy_W1A2_control, num_runs, flips, output_folder)\n",
     "\n",
-    "test_W1A1(num_runs, 5, output_folder)\n",
-    "test_W1A2(num_runs, 5, output_folder)\n",
-    "\n",
-    "test_W1A1(num_runs, 10, output_folder)\n",
-    "test_W1A2(num_runs, 10, output_folder)\n",
-    "\n",
-    "test_W1A1(num_runs, 20, output_folder)\n",
-    "test_W1A2(num_runs, 20, output_folder)\n",
-    "\n",
-    "test_W1A1(num_runs, 50, output_folder)\n",
-    "test_W1A2(num_runs, 50, output_folder)\n",
-    "\n",
-    "test_W1A1(num_runs, 100, output_folder)\n",
-    "test_W1A2(num_runs, 100, output_folder)"
+    "for flips in flip_counts:\n",
+    "    for layer in range(5):\n",
+    "        test_network_layers(bnn.NETWORK_LFCW1A1, accuracy_W1A1_control, num_runs, flips, [layer], output_folder)\n",
+    "        test_network_layers(bnn.NETWORK_LFCW1A2, accuracy_W1A2_control, num_runs, flips, [layer], output_folder)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
