Fix "Fault Testing.ipynb" error

--- a/notebooks/Fault Testing.ipynb
+++ b/notebooks/Fault Testing.ipynb
@@ -570,7 +570,7 @@
     "        return out\n",
     "\n",
     "    # Calculates various stats given the results of a test (formatted with __build_output_dict)\n",
-    "    def __calculate_stats(self, output_dict):\n",make_output_dict
+    "    def __calculate_stats(self, output_dict):\n",
     "        out = output_dict.copy()\n",
     "        for key, value in output_dict[\"results\"].items():\n",
     "            out[\"results\"][key] = {}\n",
