--- a/notebooks/Fault Testing.ipynb
+++ b/notebooks/Fault Testing.ipynb
@@ -475,7 +475,7 @@
     "\n",
     "            if self.dataset == 'cifar10':\n",
     "                results[i] = classifier.classify_cifars_with_faults(self.input_file, num_flips, flip_word, weight_or_threshold, target_layers).tolist()\n",
-    "            else if self.dataset == 'mnist':\n",
+    "            elif self.dataset == 'mnist':\n",
     "                results[i] = classifier.classify_mnists_with_faults(self.input_file, num_flips, flip_word, weight_or_threshold, target_layers).tolist()\n",
     "            else:\n",
     "                results[i] = classifier.classify_images_with_faults(self.input_file, num_flips, flip_word, weight_or_threshold, target_layers).tolist()\n",
