--- a/notebooks/Fault Testing.ipynb
+++ b/notebooks/Fault Testing.ipynb
@@ -514,7 +514,7 @@
     "\n",
     "    @classmethod\n",
     "    def MNISTTest(cls, network, input_file, labels):\n",
-    "        return cls(network, 'minst', input_file, labels)"
+    "        return cls(network, 'mnist', input_file, labels)"
    ]
   },
   {
