--- a/notebooks/Fault Testing.ipynb
+++ b/notebooks/Fault Testing.ipynb
@@ -139,7 +139,7 @@
     "        gtreader = csv.reader(gtfile, delimiter=';')\n",
     "        next(gtreader)\n",
     "        for row in gtreader:\n",
-    "            image_files.append(path + '/' + row[0])\n",
+    "            image_files.append(folder + '/' + row[0])\n",
     "            labels.append(int(row[7]))\n",
     "\n",
     "    labels = labels[0:num_images]\n",
