--- a/notebooks/Fault Testing.ipynb
+++ b/notebooks/Fault Testing.ipynb
@@ -222,7 +222,7 @@
     "def load_mnist_testset(folder, num_images=10000):\n",
     "    num_images = min(num_images, 10000)\n",
     "\n",
-    "    idx3_path = folder + \"/t10k-labels-idx3-ubyte\"\n",
+    "    idx3_path = folder + \"/t10k-images-idx3-ubyte\"\n",
     "    idx1_path = folder + \"/t10k-labels-idx1-ubyte\"\n",
     "    labels = []\n",
     "    \n",
